[package]
name = "auroraview-pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AuroraView Pack: Zero-dependency application packaging"
keywords = ["webview", "packaging", "bundler", "rust"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "auroraview_pack"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Progress bars and spinners
indicatif = "0.17"
console = "0.15"

# File system operations
walkdir = "2.5"
glob = "0.3"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Archive format
tar = "0.4"

# System directories
dirs = "6.0"

# Machine ID
hostname = "0.4"

# Parallel processing
rayon = "1.10"

# Content hashing (for cache key generation)
blake3 = "1.5"

# Temp files
tempfile = "3.20"

# Base64 encoding (for bytecode)
base64 = "0.22"

# Random number generation
rand = "0.8"

# Code protection (optional)
aurora-protect = { path = "../aurora-protect", optional = true }

[features]
default = []
# Enable Python code protection
code-protection = ["aurora-protect"]

[dev-dependencies]
# Testing utilities
tempfile = "3.20"
