[package]
name = "auroraview-settings"
version = "0.1.0"
edition = "2021"
description = "Settings and preferences management for AuroraView"
license = "MIT"
repository = "https://github.com/aspect-build/auroraview"
keywords = ["settings", "preferences", "configuration"]
categories = ["config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"

[dev-dependencies]
rstest = "0.24"
tempfile = "3.15"
