[package]
name = "auroraview-settings"
version.workspace = true
edition.workspace = true
description = "Settings and preferences management for AuroraView"
license.workspace = true
repository.workspace = true
keywords = ["settings", "preferences", "configuration"]
categories = ["config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
rstest = "0.26"
tempfile = "3.15"
