[package]
name = "auroraview-tabs"
version = "0.1.0"
edition = "2021"
description = "Tab management for AuroraView (WebView-agnostic)"
license = "MIT"
repository = "https://github.com/aspect-apps/auroraview"
keywords = ["webview", "tabs", "browser"]
categories = ["gui", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
thiserror = "1"

[dev-dependencies]

[features]
default = []
