[package]
name = "auroraview-tabs"
version.workspace = true
edition.workspace = true
description = "Tab management for AuroraView (WebView-agnostic)"
license.workspace = true
repository.workspace = true
keywords = ["webview", "tabs", "browser"]
categories = ["gui", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
thiserror = "2.0"
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
tempfile = "3"

[features]
default = []
