[package]
name = "auroraview-telemetry"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenTelemetry-based telemetry for AuroraView (logs, traces, metrics)"
keywords = ["telemetry", "opentelemetry", "tracing", "metrics", "observability"]
categories = ["development-tools::profiling"]

[lib]
name = "auroraview_telemetry"
path = "src/lib.rs"

[dependencies]
# OpenTelemetry core
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"], optional = true }

# Tracing integration (bridge tracing -> OpenTelemetry)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.32"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Thread safety
parking_lot = "0.12"
once_cell = "1.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.48", features = ["rt", "sync"] }

[dev-dependencies]
rstest = "0.26"
tempfile = "3.15"
tokio = { version = "1.48", features = ["full", "test-util"] }

[features]
default = ["otlp"]
otlp = ["opentelemetry-otlp"]
