[package]
name = "photoshop-websocket-server"
version = "1.0.0"
edition = "2021"
authors = ["AuroraView Team"]
description = "WebSocket server for Photoshop UXP plugin integration"

[[bin]]
name = "websocket_server"
path = "websocket_server.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"

